--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,8 @@
 <h3 class="is-size-3">Posts:</h3>
 {% for post in posts %}
     <strong>Title</strong> {{ post.title }} <br>
-    <strong>Post:</strong> {{ post.description }} <br><br>
+    <strong>Post:</strong> {{ post.description }} <br>
+    <strong>Author:</strong> {{ post.author.name }} <br><br>
 {% endfor %}
 
 <!-- messages -->
