--- a/project/users/templates/register.html
+++ b/project/users/templates/register.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<h1 class="is-size-2">Please login</h1>
+<h1 class="is-size-2">Please Register</h1>
 <br>
 <!-- errors -->
 {% if error %}
@@ -34,6 +34,20 @@
     </div>
 
     <div class="field">
+        <label class="label">Email</label>
+        <div class="control">
+            {{ form.email(placeholder='email', class='input') }}
+        </div>
+        <p class="help is-danger">
+            {% if form.email.errors %}
+                {% for error in form.email.errors %}
+                    {{ error }}
+                {% endfor %}
+            {% endif %}
+        </p>
+    </div>
+
+    <div class="field">
         <label class="label">Password</label>
         <div class="control">
             {{ form.password(placeholder='password', class='input') }}
@@ -48,8 +62,22 @@
     </div>
 
     <div class="field">
+        <label class="label">Confirm Password</label>
         <div class="control">
-            <button class="button is-link is-dark" type="submit">Submit</button>
+            {{ form.confirm(placeholder='confirm', class='input') }}
+        </div>
+        <p class="help is-danger">
+            {% if form.confirm.errors %}
+                {% for error in form.confirm.errors %}
+                    {{ error }}
+                {% endfor %}
+            {% endif %}
+        </p>
+    </div>
+
+    <div class="field">
+        <div class="control">
+            <button class="button is-link is-dark" type="submit">Register</button>
         </div>
     </div>
 
